<resources>
    <string name="app_name">eMiasto</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wikitude">wikitude</string>

    <string name="btnTxtStartWikitude">Start Wikitude!</string>
    <string name="btnTextShowAbout">O programie</string>
    <string name="btnTxtCloseApp"> Opuść eMiasto</string>
    <string name ="btnTxtGetGps">Pobierz dane GPS</string>

    <string name="txtEMiasto">eMiasto mobile</string>
    <string name="txtK">Kamil Zieliński</string>
    <string name="txtM">Marcin Schmidtke</string>
    <string name="txtMmail">marcin.schmidtke@gmail.com</string>
    <string name="txtKmail">kp.zielinski@gmail.com</string>
    <string name="txtStudia">Informatyka magisterska niestacjonarna</string>
    <string name="txtWeii">Wydział Elektrotechniki i Informatyki</string>
    <string name="txtPollub">Politechnika Lubelska w Lublinie</string>
    <string name="txtMiasto">Lublin</string>
    <string name="txt2015">2015</string>
    <string name="title_activity_users">users</string>
    <string name="title_activity_add_user">AddUser</string>


    <string name="location_fetching_message">Próbuję określić Twoją lokalizację</string>
    <string name="file_missing">Nie wczytano pliku z punktami</string>
    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
</resources>
